# surface-reconstruction-benchmark

./: CMakeLists.txt  LICENSE  LICENSE.rst  Makefile  README  README.md  sample_implicit.cpp
OpenMesh/: CMakeLists.txt  Makefile
OpenMesh/OpenMesh/: CHANGES  Doxyfile  README  VERSION  make.inc
OpenMesh/OpenMesh/Core/: make.inc
OpenMesh/OpenMesh/Core/Geometry/: Config.hh  LoopSchemeMaskT.hh  MathDefs.hh  Plane3d.hh  QuadricT.hh  VectorT.hh  VectorT_inc.hh  make.inc
OpenMesh/OpenMesh/Core/IO/: BinaryHelper.cc  BinaryHelper.hh  IOInstances.hh  IOManager.cc  IOManager.hh  MeshIO.hh  OFFFormat.hh  OMFormat.cc  OMFormat.hh  Options.hh  SR_binary.hh  SR_binary_spec.hh  SR_binary_vector_of_fundamentals.inl  SR_binary_vector_of_string.inl  SR_rbo.hh  SR_store.hh  SR_types.hh  StoreRestore.hh  make.inc
OpenMesh/OpenMesh/Core/IO/exporter/: BaseExporter.hh  ExporterT.hh  make.inc
OpenMesh/OpenMesh/Core/IO/importer/: BaseImporter.hh  ImporterT.hh  make.inc
OpenMesh/OpenMesh/Core/IO/reader/: BaseReader.cc  BaseReader.hh  OBJReader.cc  OBJReader.hh  OFFReader.cc  OFFReader.hh  OMReader.cc  OMReader.hh  PLYReader.cc  PLYReader.hh  STLReader.cc  STLReader.hh  make.inc  ply.cc  ply.hh
OpenMesh/OpenMesh/Core/IO/writer/: BaseWriter.cc  BaseWriter.hh  OBJWriter.cc  OBJWriter.hh  OFFWriter.cc  OFFWriter.hh  OMWriter.cc  OMWriter.hh  STLWriter.cc  STLWriter.hh  make.inc
OpenMesh/OpenMesh/Core/Mesh/: ArrayItems.hh  ArrayKernel.cc  ArrayKernel.hh  AttribKernelT.hh  Attributes.hh  BaseKernel.cc  BaseKernel.hh  BaseMesh.hh  Casts.hh  CirculatorsT.hh  FinalMeshItemsT.hh  Handles.hh  IteratorsT.hh  PolyConnectivity.cc  PolyConnectivity.hh  PolyMeshT.cc  PolyMeshT.hh  PolyMesh_ArrayKernelT.hh  Status.hh  Traits.hh  TriConnectivity.cc  TriConnectivity.hh  TriMeshT.cc  TriMeshT.hh  TriMesh_ArrayKernelT.hh  make.inc
OpenMesh/OpenMesh/Core/System/: compiler.hh  config.h  config.hh  make.inc  mostream.hh  omstream.cc  omstream.hh
OpenMesh/OpenMesh/Core/Templates/: make.inc  newClass.cc  newClass.hh  newClassT.cc  newClassT.hh
OpenMesh/OpenMesh/Core/Utils/: AutoPropertyHandleT.hh  BaseProperty.cc  BaseProperty.hh  Endian.cc  Endian.hh  GenProg.hh  Noncopyable.hh  Property.hh  PropertyContainer.hh  SingletonT.cc  SingletonT.hh  color_cast.hh  make.inc  vector_cast.hh  vector_traits.hh
OpenMesh/OpenMesh/Tools/: make.inc
OpenMesh/OpenMesh/Tools/Kernel_OSG/: ArrayKernelT.hh  AttribKernelT.hh  PropertyKernel.hh  PropertyT.hh  Traits.hh  TriMesh_OSGArrayKernelT.hh  VectorAdapter.hh  bindT.hh  color_cast.hh
OpenMesh/OpenMesh/Tools/Utils/: Config.hh  GLConstAsString.hh  Gnuplot.cc  Gnuplot.hh  HeapT.hh  MeshCheckerT.cc  MeshCheckerT.hh  NumLimitsT.hh  StripifierT.cc  StripifierT.hh  TestingFramework.hh  Timer.cc  Timer.hh  conio.cc  conio.hh  getopt.c  getopt.h
OpenMesh/OpenMesh/openmesh/templates/: cpp_template  header_template
OpenMesh/OpenMesh/templates/: cpp  h
ann/: CMakeLists.txt  Makefile  lib
ann/ann2fig/: ann2fig.cpp
ann/test/: Makefile  dump.txt
evaluator/: ComputationTimer.h  GlobalStats.cpp  GlobalStats.h  KdOpenMesh.cpp  KdOpenMesh.h  Makefile  ShortestDistanceMap.cpp  ShortestDistanceMap.h  UniformGrid.cpp  UniformGrid.h  implicit_sampler.cpp  implicit_sampler.h  implicit_uniform.cpp  kd_tree.cpp  kd_tree.h  mesh_fixer.cpp  mesh_sampler.cpp  mesh_sampler.h  recon_evaluation.cpp  recon_evaluation.h  run_evaluation.cpp  sample_mesh.cpp  shape_distribution.cpp  shape_distribution.h
evaluator/plot/: aggregate_distribution.cpp  aggregation.cpp  dump_barplot.cpp  dump_distribution.cpp  dump_lines.cpp  dump_meta.cpp  dump_single.cpp  single_distribution.cpp
modeling/: DenseEigenSystem.cpp  DenseEigenSystem.h  DenseMatrix.cpp  DenseMatrix.h  ImplicitFunction.cpp  ImplicitFunction.h  ImplicitSphere.h  Makefile  Rigid.cpp  Rigid.h  RotationMatrix.cpp  RotationMatrix.h  Vector.cpp  Vector.h  Vector3.h  collision.h  isosurface.cpp  linalg_consts.h  lm_method.cpp  lm_method.h  mesh_to_implicit.cpp  mesh_types.h  mpu_soup.cpp  mpu_soup.h  shape_loader.h  tri_integrator.cpp  tri_integrator.h
pbrt/: CMakeLists.txt  changelog-v2.txt  pbrt-git-version.txt
pbrt/src/: Makefile
pbrt/src/core/: parallel.h  pbrtparse.output
pbrt/src/samplers/: bestcandidate.cpp  bestcandidate.h
pbrt/src/tools/: exravg.cpp  exrdiff.cpp  exrtotiff.cpp  samplepat.cpp  tifftoexr.cpp
recon/: poisson_recon.sh
recon/poisson/: Makefile  (+2 more)
registration/: CMakeLists.txt
registration/tnt/: tnt_sparse_matrix_csr.h
registration/tps_alignment/: Makedefs.Darwin  Makedefs.Linux  Makerules  README
registration/tps_alignment/include/: EdgeMesh.h  ICP.h  KDtree.h  global_reg.h  mempool.h  timestamp.h  tps.h
registration/tps_alignment/scripts/: detect_arch.pl  greg  qcorrespond  qcorrespond_fur  tps_vrip
registration/tps_alignment/src/: EdgeMesh.cc  ICP.cc  KDtree.cc  Makefile  autorient.cc  correspond.cc  distance.cc  global_reg.cc  global_reg_util.cc  interactive.cc  make_session.cc  ply2vn.cc  ppmio.c  pre_to_ply.cc  preprocess.cc  tps.cc
registration/trimesh2/: Makefile
registration/trimesh2/gluit/: freeglut_internal.h
registration/trimesh2/include/: Color.h  TriMesh.h  Vec.h  XForm.h
registration/trimesh2/include/GL/: freeglut_std.h
registration/trimesh2/libsrc/: GLCamera.cc  TriMesh_connectivity.cc  TriMesh_curvature.cc  TriMesh_io.cc
registration/trimesh2/optsrc/: mesh_opt.cc
sampler/: GaussianFit.cpp  GaussianFit.h  ImplicitNewton.cpp  ImplicitNewton.h  Makefile  NPTSReader.cpp  NPTSReader.h  OrientedPointCloud.cpp  OrientedPointCloud.h  OrientedRangeImage.cpp  OrientedRangeImage.h  PNGImage.cpp  PNGImage.h  PointCloud.cpp  PointCloud.h  RangeImage.cpp  RangeImage.h  RangeScanner.cpp  RangeScanner.h  RayCaster.cpp  RayCaster.h  SparseRangeScan.cpp  SparseRangeScan.h  SphericalImager.cpp  SphericalImager.h  UniformOccupancyGrid.cpp  UniformOccupancyGrid.h  UniformSampler.cpp  UniformSampler.h  XYZReader.cpp  XYZReader.h  basic_graph.h  mesh_types.h  pc_generator.cpp  point_orienter.cpp  projection_cleanup.cpp  run_uniform.cpp  union_find.h
scripts/: RunSampler.py  scripts_recon.py
(+30 files in other folders)
